--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="./assets/images/Logo web.png" width="72" height="168" alt="logo">
+        <img class="logo" src="./assets/images/Logo web.png" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
-          <li><a href="#"><img src="./assets/images/spain-flag-icon.svg" width="30" height="20.3" alt="language spanish"></a></li>
-          <!-- <li><a href="#"><img src="./assets/images/united-states-flag-icon.svg" width="30" height="20.3" alt="language english"></a></li> -->
+          <li><a href="#">ENG</a></li>
+          <li><a href="#">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -27,7 +27,7 @@
               <a class="font-text" href="/">Home</a>
             </li>
             <li>
-              <a class="font-text" href="/mediacomposing">Media Composing</a>
+              <div class="link-button"><a class="font-text" href="/mediacomposing">Media Composing</a><i class="icon-chevron-down"></i></div>
               <ul class="navbar__submenu">
                 <li><a class="font-text" href="/mediacomposing/showreel">Showreel</a></li>
                 <li><a class="font-text" href="/mediacomposing/audioreel">Audio reel</a></li>
@@ -50,35 +50,35 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide focuspoint" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-torre" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text short-text">torre<span>UP HEAR</span></h2>
           <img src="./assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-emotions" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Emotions and thoughts blending into images and sounds</h2>
           <img src="./assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-passion" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Passion that transforms art into a meaningful experience</h2>
           <img src="./assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-music" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Music with the heart intertwined into each note</h2>
           <img src="./assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="0.1" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-sounds" data-focus-x="0.1" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Sounds that touch beyond the ears</h2>
           <img src="./assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-sentiment" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Combined effort that enhances the sentiment</h2>
           <img src="./assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="0.6" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-achieves" data-focus-x="0.6" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Art that achieves a high standard</h2>
           <img src="./assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
         </div>
-        <div class="swiper-slide focuspoint" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
+        <div class="swiper-slide focuspoint slide-lyrics" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Lyrics and melodies that uplift the spirit</h2>
           <img src="./assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
         </div>
