--- a/mediacomposing/index.html
+++ b/mediacomposing/index.html
@@ -12,12 +12,12 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="../assets/images/Logo web.png" width="72" height="168" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
-          <li><a href="#"><img src="../assets/images/spain-flag-icon.svg" width="30" height="20.3" alt="language spanish"></a></li>
-          <!-- <li><a href="#"><img src="../assets/images/united-states-flag-icon.svg" width="30" height="20.3" alt="language english"></a></li> -->
+          <li><a href="#">ENG</a></li>
+          <li><a href="#">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -26,7 +26,7 @@
               <a class="font-text" href="/">Home</a>
             </li>
             <li>
-              <a class="font-text" href="/mediacomposing">Media Composing</a>
+              <div class="link-button"><a class="font-text" href="/mediacomposing">Media Composing</a><i class="icon-chevron-down"></i></div>
               <ul class="navbar__submenu">
                 <li><a class="font-text" href="/mediacomposing/showreel">Showreel</a></li>
                 <li><a class="font-text" href="/mediacomposing/audioreel">Audio reel</a></li>
