--- a/mediacomposing/team.html
+++ b/mediacomposing/team.html
@@ -16,7 +16,7 @@
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
-          <li><a href="#">ENG</a></li>
+          <li><a class="active" href="#">ENG</a></li>
           <li><a href="#">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
@@ -47,13 +47,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/mediacomposing/team/torreM"><img src="../assets/images/torre.png" alt=""></a>
+        <a href="/torreM"><img src="../assets/images/torre.png" alt=""></a>
       </div>
       <div class="image-member">
-        <a href="/mediacomposing/team/omarM"><img src="../assets/images/omar.png" alt=""></a>
+        <a href="/omarM"><img src="../assets/images/omar.png" alt=""></a>
       </div>
       <div class="image-member">
-        <a href="/mediacomposing/team/landoM"><img src="../assets/images/lando.png" alt=""></a>
+        <a href="/landoM"><img src="../assets/images/lando.png" alt=""></a>
       </div>
     </div>
   </main>
