--- a/mediacomposing/audioreel.html
+++ b/mediacomposing/audioreel.html
@@ -16,7 +16,7 @@
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
-          <li><a href="#">ENG</a></li>
+          <li><a class="active" href="#">ENG</a></li>
           <li><a href="#">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
