feat: inclusion de dos nuevos paginas de idioma español

--- a/es/index.html
+++ b/es/index.html
@@ -4,34 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Torremusic</title>
+  <title>Inicio - Torremusic</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-  <link rel="stylesheet" href="./assets/css/home.css">
+  <link rel="stylesheet" href="../assets/css/home.css">
 </head>
 <body>
   <nav class="navbar px-15">
     <div class="navbar__container">
-      <a href="/">
-        <img class="logo" src="./assets/images/Logo web.png" width="58" height="135" alt="logo">
+      <a href="/es/">
+        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
-          <li><a class="active" href="#">ENG</a></li>
-          <li><a href="/es/">ESP</a></li>
+          <li><a href="/">ENG</a></li>
+          <li><a class="active" href="#">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
           <ul class="navbar__menu-options">
             <li>
-              <a class="font-text" href="/">Home</a>
+              <a class="font-text" href="/es/">Inicio</a>
             </li>
             <li>
-              <div class="link-button"><a class="font-text" href="/mediacomposing">Media Composing</a><i class="icon-chevron-down"></i></div>
+              <div class="link-button"><a class="font-text" href="/es/composicionparamedios">Composición para medios</a><i class="icon-chevron-down"></i></div>
               <ul class="navbar__submenu">
-                <li><a class="font-text" href="/mediacomposing/showreel">Showreel</a></li>
-                <li><a class="font-text" href="/mediacomposing/audioreel">Audio reel</a></li>
-                <li><a class="font-text" href="/mediacomposing/team">Team</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/showreel">Demo de video</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/audioreel">Demo de audio</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/team">Equipo</a></li>
               </ul>
             </li>
           </ul>
@@ -52,35 +52,35 @@
         <!-- Slides -->
         <div class="swiper-slide focuspoint slide-torre" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text short-text">torre<span>UP HEAR</span></h2>
-          <img src="./assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
+          <img src="../assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
         </div>
         <div class="swiper-slide focuspoint slide-emotions" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Emotions and thoughts blending into images and sounds</h2>
-          <img src="./assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
+          <h2 class="swiper-slide__text-image font-text long-text">Emoción y pensamiento fusionados en imagen y sonido</h2>
+          <img src="../assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
         </div>
         <div class="swiper-slide focuspoint slide-passion" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Passion that transforms art into a meaningful experience</h2>
-          <img src="./assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
+          <h2 class="swiper-slide__text-image font-text long-text">Pasión que transforma herramientas en arte</h2>
+          <img src="../assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
         </div>
         <div class="swiper-slide focuspoint slide-music" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Music with the heart intertwined into each note</h2>
-          <img src="./assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
+          <h2 class="swiper-slide__text-image font-text long-text">Música con el corazón entretejido en cada nota</h2>
+          <img src="../assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
         </div>
         <div class="swiper-slide focuspoint slide-sounds" data-focus-x="0.1" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Sounds that touch beyond the ears</h2>
-          <img src="./assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
+          <h2 class="swiper-slide__text-image font-text long-text">Sonido que toca más allá de los oídos</h2>
+          <img src="../assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
         </div>
         <div class="swiper-slide focuspoint slide-sentiment" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Combined effort that enhances the sentiment</h2>
-          <img src="./assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
+          <h2 class="swiper-slide__text-image font-text long-text">Combinación de esfuerzos que realzan el sentimiento</h2>
+          <img src="../assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
         </div>
         <div class="swiper-slide focuspoint slide-achieves" data-focus-x="0.6" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Art that achieves a high standard</h2>
-          <img src="./assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
+          <h2 class="swiper-slide__text-image font-text long-text">Arte que considera hasta los mínimos detalles</h2>
+          <img src="../assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
         </div>
         <div class="swiper-slide focuspoint slide-lyrics" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
-          <h2 class="swiper-slide__text-image font-text long-text">Lyrics and melodies that uplift the spirit</h2>
-          <img src="./assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
+          <h2 class="swiper-slide__text-image font-text long-text">Letras y melodías que levantan el espíritu</h2>
+          <img src="../assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
         </div>
       </div>
       <!-- If we need pagination -->
@@ -89,7 +89,7 @@
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="./assets/js/focuspoint.js"></script>
+  <script src="../assets/js/focuspoint.js"></script>
   <script>
     (function($) {
       $(document).ready(function() {
@@ -97,6 +97,6 @@
       });
     }(jQuery));
   </script>
-  <script src="./assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 </html>
