feat: inclusion de paginas en español y meta datos

--- a/es/composicionparamedios/index.html
+++ b/es/composicionparamedios/index.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="../../favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Composición para medios">
+	<meta name="twitter:url" content="http://www.torremusic.com/es/composicionparamedios/index.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Composición para medios">
+	<meta property="og:url" content="http://www.torremusic.com/es/composicionparamedios/index.html">
   <title>Composición para medios</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../assets/css/media-composing.css">
@@ -28,9 +37,9 @@
             <li>
               <div class="link-button"><a class="font-text" href="/es/composicionparamedios">Composición para medios</a><i class="icon-chevron-down"></i></div>
               <ul class="navbar__submenu">
-                <li><a class="font-text" href="/es/composicionparamedios/showreel">Demo de video</a></li>
-                <li><a class="font-text" href="/es/composicionparamedios/audioreel">Demo de audio</a></li>
-                <li><a class="font-text" href="/es/composicionparamedios/team">Equipo</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/demodevideo">Demo de video</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/demodeaudio">Demo de audio</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/equipo">Equipo</a></li>
               </ul>
             </li>
           </ul>
@@ -47,8 +56,8 @@
   <main>
     <div class="links-paragraph-block px-15 content-container">
       <div class="group-links">
-        <a href="/es/composicionparamedios/showreel"><img src="../../assets/images/demo-video.png" alt="logo show reel"></a>
-        <a href="/es/composicionparamedios/audioreel"><img src="../../assets/images/demo-audio.png" alt="logo audio reel"></a>
+        <a href="/es/composicionparamedios/demodevideo"><img src="../../assets/images/demo-video.png" alt="logo demo de video"></a>
+        <a href="/es/composicionparamedios/demodeaudio"><img src="../../assets/images/demo-audio.png" alt="logo demo de audio"></a>
       </div>
       <p class="font-text px-15 description">
         Qué hacemos:<br>
@@ -66,15 +75,15 @@
     </div>
     <div class="group-images-container px-15 content-container">
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Top of the line virtual libraries">
+        <img src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Librerías virtuales de tope de línea">
         <h4 class="font-text">Librerías virtuales de tope de línea</h4>
       </div>
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.002.jpeg" alt="Professional musicians">
+        <img src="../../assets/images/Fotos Royalty free.002.jpeg" alt="Músicos profesionales">
         <h4 class="font-text">Músicos profesionales</h4>
       </div>
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.003.jpeg" alt="Real orchestras">
+        <img src="../../assets/images/Fotos Royalty free.003.jpeg" alt="Orquestas reales">
         <h4 class="font-text">Orquestas reales</h4>
       </div>
     </div>
