--- a/es/index.html
+++ b/es/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Torremusic</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="../favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../../assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Inicio">
+	<meta name="twitter:url" content="http://www.torremusic.com/es/index.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Inicio">
+	<meta property="og:url" content="http://www.torremusic.com/es/index.html">
+  <title>Inicio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="../assets/css/home.css">
@@ -29,9 +38,9 @@
             <li>
               <div class="link-button"><a class="font-text" href="/es/composicionparamedios">Composición para medios</a><i class="icon-chevron-down"></i></div>
               <ul class="navbar__submenu">
-                <li><a class="font-text" href="/es/composicionparamedios/showreel">Demo de video</a></li>
-                <li><a class="font-text" href="/es/composicionparamedios/audioreel">Demo de audio</a></li>
-                <li><a class="font-text" href="/es/composicionparamedios/team">Equipo</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/demodevideo">Demo de video</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/demodeaudio">Demo de audio</a></li>
+                <li><a class="font-text" href="/es/composicionparamedios/equipo">Equipo</a></li>
               </ul>
             </li>
           </ul>
@@ -56,31 +65,31 @@
         </div>
         <div class="swiper-slide focuspoint slide-emotions" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Emoción y pensamiento fusionados en imagen y sonido</h2>
-          <img src="../assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
+          <img src="../assets/images/JPG (Alta calidad).002.jpeg" alt="Emoción y pensamiento fusionados en imagen y sonido">
         </div>
         <div class="swiper-slide focuspoint slide-passion" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Pasión que transforma herramientas en arte</h2>
-          <img src="../assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
+          <img src="../assets/images/JPG (Alta calidad).003.jpeg" alt="Pasión que transforma herramientas en arte">
         </div>
         <div class="swiper-slide focuspoint slide-music" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Música con el corazón entretejido en cada nota</h2>
-          <img src="../assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
+          <img src="../assets/images/JPG (Alta calidad).004.jpeg" alt="Música con el corazón entretejido en cada nota">
         </div>
         <div class="swiper-slide focuspoint slide-sounds" data-focus-x="0.1" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Sonido que toca más allá de los oídos</h2>
-          <img src="../assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
+          <img src="../assets/images/JPG (Alta calidad).005.jpeg" alt="Sonido que toca más allá de los oídos">
         </div>
         <div class="swiper-slide focuspoint slide-sentiment" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Combinación de esfuerzos que realzan el sentimiento</h2>
-          <img src="../assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
+          <img src="../assets/images/JPG (Alta calidad).006.jpeg" alt="Combinación de esfuerzos que realzan el sentimiento">
         </div>
         <div class="swiper-slide focuspoint slide-achieves" data-focus-x="0.6" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Arte que considera hasta los mínimos detalles</h2>
-          <img src="../assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
+          <img src="../assets/images/JPG (Alta calidad).007.jpeg" alt="Arte que considera hasta los mínimos detalles">
         </div>
         <div class="swiper-slide focuspoint slide-lyrics" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Letras y melodías que levantan el espíritu</h2>
-          <img src="../assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
+          <img src="../assets/images/JPG (Alta calidad).008.jpeg" alt="Letras y melodías que levantan el espíritu">
         </div>
       </div>
       <!-- If we need pagination -->
