--- a/landoM.html
+++ b/landoM.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Torre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Lando">
+	<meta name="twitter:url" content="http://www.torremusic.com/lando.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Lando">
+	<meta property="og:url" content="http://www.torremusic.com/lando.html">
+  <title>Lando</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/member.css">
 </head>
@@ -17,7 +26,7 @@
       <div class="navbar__options-container">
         <ul class="navbar__flags">
           <li><a class="active" href="#">ENG</a></li>
-          <li><a href="#">ESP</a></li>
+          <li><a href="/es/lando">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -47,14 +56,14 @@
   <main class="px-15">
     <div class="content-container">
       <p class="quote-description font-text">
-        <em>"We know each other since our teenage years. Soon we'd be beginning to produce musically to other new artists, as well as making music for media in Peru and USA. With an inusual umbrella of skills and experience he became a natural ignitor, motivator and a key contributor within Torre Music.<br>He owns a great balance among quality sound appreciation, the ability to take the best choices during any mixing process and his openness to take advice and lessons from well known and awarded audio engineers, all of that has produced as a result a level of quality that encourage and also challenge our synergy".</em>
+        <em>"We know each other since our teenage years. Soon we'd be beginning to produce musically to other new artists, as well as making music for media in Peru and USA. With an inusual umbrella of skills and experience he became a natural ignitor, motivator and a key contributor within Torre Music.<br>He owns a great balance among quality sound appreciation, the ability to take the best choices during any mixing process and his openness to take advice and lessons from well known and awarded audio engineers, all of that has produced as a result a level of quality that encourage and also challenge our synergy".<br></em>
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre detail">
+        <img class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre photo">
       </div>
       <p class="quote-description font-text">
-        <em>"Despite his long experience as a short film director, photographer, as well as a music producer, Lando didn't lose his passion for audio engineering, which has allowed him to grow until the point of achieving a level of quality that matches the international standards. Due to his vast background, he's always able to bring solid support to overcome the obstacles we may face within the production process at Torre Music".</em>
+        <em>"Despite his long experience as a short film director, photographer, as well as a music producer, Lando didn't lose his passion for audio engineering, which has allowed him to grow until the point of achieving a level of quality that matches the international standards. Due to his vast background, he's always able to bring solid support to overcome the obstacles we may face within the production process at Torre Music".<br></em>
         <strong><br>Omar</strong>
       </p>
     </div>
