--- a/mediacomposing/team.html
+++ b/mediacomposing/team.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="../favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Team">
+	<meta name="twitter:url" content="http://www.torremusic.com/mediacomposing/team.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Team">
+	<meta property="og:url" content="http://www.torremusic.com/mediacomposing/team.html">
   <title>Team</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../assets/css/team.css">
@@ -17,7 +26,7 @@
       <div class="navbar__options-container">
         <ul class="navbar__flags">
           <li><a class="active" href="#">ENG</a></li>
-          <li><a href="#">ESP</a></li>
+          <li><a href="/es/composicionparamedios/equipo">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -47,13 +56,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/torreM"><img src="../assets/images/torre.png" alt=""></a>
+        <a href="/torreM"><img src="../assets/images/torre.png" alt="torre photo"></a>
       </div>
       <div class="image-member">
-        <a href="/omarM"><img src="../assets/images/omar.png" alt=""></a>
+        <a href="/omarM"><img src="../assets/images/omar.png" alt="omar photo"></a>
       </div>
       <div class="image-member">
-        <a href="/landoM"><img src="../assets/images/lando.png" alt=""></a>
+        <a href="/landoM"><img src="../assets/images/lando.png" alt="lando photo"></a>
       </div>
     </div>
   </main>
