--- a/omarM.html
+++ b/omarM.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Torre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Omar">
+	<meta name="twitter:url" content="http://www.torremusic.com/omar.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Omar">
+	<meta property="og:url" content="http://www.torremusic.com/omar.html">
+  <title>Omar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/member.css">
 </head>
@@ -17,7 +26,7 @@
       <div class="navbar__options-container">
         <ul class="navbar__flags">
           <li><a class="active" href="#">ENG</a></li>
-          <li><a href="#">ESP</a></li>
+          <li><a href="/es/omar">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -48,14 +57,14 @@
     <div class="content-container">
       <p class="quote-description font-text">
         <em>"Omar and I have worked for many years leading a good number of teams with instrumentalists and vocalists. With a master degree in musicology, a fine performance and a natural talent for music, he has participated with different symphonic orchestras and world class musicians. He's also a music teacher in a both exclusive music university and a high school in Lima. On top of that, his personality as a professional musician and friend are for sure a key contribution to the synergy within Media Composing".<br></em>
-        <strong>Torre</strong>
+        <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/omar-detail.jpg" alt="torre detail">
+        <img class="image-detail" src="./assets/images/omar-detail.jpg" alt="omar photo">
       </div>
       <p class="quote-description font-text">
         <em>"He owns an academic preparation that turns him into a very valuable element for our music projects in Media Composing. I think Omar is a musician who managed to balance very well art with knowledge. Counting on him brings confidence at knowing everything will be on point and on time".<br></em>
-        <strong>Lando</strong>
+        <strong><br>Lando</strong>
       </p>
     </div>
     <div class="btn-back-container">
