--- a/torreM.html
+++ b/torreM.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" sizes="64x64" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png" />
+  <meta name="robots" content="index, follow" />
+  <meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Torre">
+	<meta name="twitter:url" content="http://www.torremusic.com/torre.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Torre">
+	<meta property="og:url" content="http://www.torremusic.com/torre.html">
   <title>Torre</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/member.css">
@@ -17,7 +26,7 @@
       <div class="navbar__options-container">
         <ul class="navbar__flags">
           <li><a class="active" href="#">ENG</a></li>
-          <li><a href="#">ESP</a></li>
+          <li><a href="/es/torre">ESP</a></li>
         </ul>
         <button id="btn-menu-mobile" class="button-menu-mobile button-without-styles"><i class="icon-menu1"></i></button>
         <div id="body-menu" class="navbar__menu">
@@ -48,14 +57,14 @@
     <div class="content-container">
       <p class="quote-description font-text">
         <em>"After many years as friends, I've got to know Torre as a pianist, composer and no doubt as a musician with a noticeable artistic sensitivity that allows him to reach up to his listeners' heart through music. I could see his versatility as a songwriter, as well as on instrumental and orchestral music".<br></em>
-        <strong>Omar</strong>
+        <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre detail">
+        <img class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre photo">
       </div>
       <p class="quote-description font-text">
         <em>"If could describe him in one line, it'd be: He breathes music.<br>Torre is a natural born musician, a dear friend. Throughout the years, I've seen and exceptional ability to intertwine feelings and emotions with music, without hesitation it's a gift and the best ingredient in his compositions".<br></em>
-        <strong>Lando</strong>
+        <strong><br>Lando</strong>
       </p>
       <div class="btn-back-container">
         <a class="btn-back font-text" href="/mediacomposing/team" type="button">Back</a>
